# nlp_arabic_fatiha

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: README_data.md
data/processed/: cleaned_fatiha.txt
github/workflows/: pipeline.yml
models/: bow_results.csv  tfidf_results.csv
notebooks/: 01_visualize_bert.ipynb  04_bert.ipynb
scripts/: run_pipeline.sh  setup_environment.sh
src/: bert_embeddings.py  bow_tfidf.py  config.py  preprocessing.py  word2vec_model.py
tests/: test_embeddings.py  test_integration.py  test_preprocessing.py
